Update and Delet method added
