# docs/swagger.json
@@ -9,14 +9,14 @@
     "host": "localhost:8080",
     "basePath": "/",
     "paths": {
-        "/users": {
+        "/api/v1/users": {
             "get": {
                 "description": "Returns a list of all users",
                 "produces": [
                     "application/json"
                 ],
                 "tags": [
-                    "users.CR"
+                    "api|users"
                 ],
                 "summary": "Get all users",
                 "responses": {
@@ -40,7 +40,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "users.CR"
+                    "api|users"
                 ],
                 "summary": "Create a user",
                 "parameters": [
@@ -59,6 +59,29 @@
                         "description": "Created",
                         "schema": {
                             "$ref": "#/definitions/main.Users"
+                        }
+                    }
+                }
+            }
+        },
+        "/api/v2/": {
+            "get": {
+                "description": "This is an example endpoint for v2",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "api|users.V2"
+                ],
+                "summary": "V2 API Example",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "object",
+                            "additionalProperties": {
+                                "type": "string"
+                            }
                         }
                     }
                 }
