# handlers.go
@@ -9,10 +9,10 @@ import(
 // allUsers godoc
 // @Summary      Get all users
 // @Description  Returns a list of all users
-// @Tags         users.CR
+// @Tags         api|users
 // @Produce      json
 // @Success      200  {array}  Users
-// @Router       /users [get]
+// @Router       /api/v1/users [get]
 func AllUsers(c *gin.Context) {
 	var users []Users
 	result := DB.Find(&users)
@@ -27,12 +27,12 @@ func AllUsers(c *gin.Context) {
 // createUser godoc
 // @Summary      Create a user
 // @Description  Adds a new user to the database
-// @Tags         users.CR
+// @Tags         api|users
 // @Accept       json
 // @Produce      json
 // @Param        user  body  Users  true  "User to create"
 // @Success      201   {object}  Users
-// @Router       /users [post]
+// @Router       /api/v1/users [post]
 func createUser(c *gin.Context) {
 	var newUser Users
 	if err := c.ShouldBindJSON(&newUser); err != nil {
@@ -47,4 +47,16 @@ func createUser(c *gin.Context) {
 	}
 
 	c.JSON(http.StatusCreated, newUser)
+}
+
+
+// V2api godoc
+// @Summary      V2 API Example
+// @Description  This is an example endpoint for v2
+// @Tags         api|users.V2
+// @Produce      json
+// @Success      200  {object}  map[string]string
+// @Router       /api/v2/ [get]
+func V2api(c *gin.Context) {
+	c.JSON(http.StatusOK, gin.H{"message": "This is the V2 API endpoint"})
 }
